--- a/client/src/Carousel.css
+++ b/client/src/Carousel.css
@@ -27,7 +27,7 @@
    font-family: FontAwesome;
    font-size: 40px;
    line-height: 1;
-   color: red;
+   color: #B39BC8;
    opacity: 0.75;
    -webkit-font-smoothing:
    antialiased;
