--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,25 @@
 html, body {
   background-color: #A1C3D1;
   color: #F0EBF4;
-  font-family: 'Roboto Mono', monospace;;
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+  font-family: 'Roboto Mono', monospace;
   letter-spacing: 0.3px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.content {
+   max-width: 800px;
+   display: flex;
+   justify-content: center;
+   padding-top: 40px;
+   padding-bottom: 20px;
 }
+
+.header {
+   padding-right: 15px;
+   padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    box-sizing: border-box;
+}
+
 .container-fluid {
     padding-top: 40px;
     padding-bottom: 20px;
