css changes to nav and family page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,11 +12,9 @@ html, body {
 
 .navigation {
   width: 100%;
-  z-index: 1000;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
-   top: 0px;
 }
 .navigation ul li {
   display: inline-block;
@@ -25,19 +23,15 @@ html, body {
   padding: 10px 40px;
   margin: 0 10px;
 }
-.navigation a :first-child {
-  padding-left:  0px;
-}
 
-@media (max-width: 700px){
-.navigation a  {
-  font-size: 16px;
-  margin: 0;
-  padding: 10px 20px;
-}
-.navigation a :first-child {
-  padding-left:  0px;
-}
+@media (max-width: 768px){
+  .navigation a  {
+    font-size: 16px;
+    margin: 0;
+  }
+  .navigation ul li :first-child {
+    padding-left:  0px;
+  }
 }
 .content {
   padding: 20px;
@@ -69,50 +63,39 @@ a:hover, a:active {
   width: 100%;
 }
 .mom {
-  display: block;
   margin-bottom: 60px;
   width: 100%;
   display: flex;
 }
 .family_pic {
   max-width: 400px;
-  overflow: visible;
-  margin: 0;
-  text-align: center;
 }
-.family_pic img {
-  width: 100%;
-  max-width: 100%;
-  vertical-align: middle;
-}
-.family_caption{
-  width: 80%;
+.family_caption {
   text-align: left;
   box-sizing: border-box;
   padding-right: 5px;
-  padding-left: 10px;
+  padding-left: 15px;
   font-size: 14px;
 }
-@media screen and (max-width: 700px) {
+@media (max-width: 768px) {
   .mom {
     display: block;
-    padding-left: 30px;
+  }
+  .family_pic {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .family_caption{
     width: 100%;
     font-size: 12px;
-    padding-right: 0px;
-    padding-left: 0px;
+    text-align: center;
   }
   .family_pic img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 70%;
-    vertical-align: bottom;
     padding-bottom: 10px;
-    padding-left: 10px;
   }
-}
-
-figure {
-  display: flex;
-  align-items: center;
 }
