--- a/client/src/css/QA.css
+++ b/client/src/css/QA.css
@@ -36,9 +36,15 @@
 .answers a:hover, a:active {
   text-decoration: none;
 }
+.qa-block {
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 50px;
+}
 .q-sign {
 	font-size: 20px;
-	color: blue;
+	color: #6d6d6d;
 }
 .question-text {
 	font-size: 14px;
@@ -47,4 +53,8 @@
 .name-text {
 	text-align: right;
 	font-family: 'Dancing Script', cursive;
+}
+.a-sign {
+	font-size: 20px;
+	color: #ffdbdb;
 }
