--- a/client/src/css/QA.css
+++ b/client/src/css/QA.css
@@ -1,3 +1,7 @@
+.question-content {
+	padding-bottom: 50px;
+	text-align: center;
+}
 .demoForm {
 	width: 300px;
 	margin: auto;
@@ -18,6 +22,7 @@
 	margin-bottom: 0;
 	font-size: 16px;
 	color: #F172A1;
+	text-align: center;
 }
 .panel-heading .accordion-toggle:after {
 	/* symbol for "opening" panels */
@@ -44,7 +49,7 @@
 }
 .q-sign {
 	font-size: 20px;
-	color: #6d6d6d;
+	color: #6c6eea;
 }
 .question-text {
 	font-size: 14px;
